# playground

./: .gitignore  playground.cabal  stack.yaml
notebooks/: FisheryStats.ipynb
src/: FisheryStats.hs
src/Playground/: Types.hs
