name:                playground
version:             0.1.0.0
synopsis:            Exploratory work on fishery statistics
description:         Please see README.md
homepage:            https://github.com/alexeiras/playground#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Eiras
maintainer:          alex@sinamo.net
copyright:           2016 Alex Eiras
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FisheryStats
  other-modules:       Playground.Types
  build-depends:       attoparsec
                     , base >= 4.7 && < 5
                     , bytestring
                     , hedis
                     , ihaskell
                     , statistics
                     , time
  default-language:    Haskell2010

test-suite playground-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , playground
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alexeiras/playground
